Add Play privacy and safety controls
